# stralgo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  format_sources.sh  main.cpp  stralgo.kdev4  test.sh
.github/workflows/: cmake.yml  unit-tests.yml
cmake/: CPM.cmake  extract_version.cmake  stralgoConfig.cmake.in
include/: ranges_config.h  stralgo.h  strconcept.h  strconv_numeric.h  strconv_numeric_common.h
include/detail/: stralgo.h  strconv_numeric.h
include/stralgo/: stralgo.h  strconcept.h  strconv_numeric.h  strconv_numeric_common.h  version.h
include/stralgo/detail/: stralgo.h  strconv_numeric.h  strong_type_compose.h
include/stralgo/utf/: utf.h
include/stralgo/utf/detail/: concepts.h  core.h  foramtters.h
include/stralgo/utf/foramtters/small_vectors/: string.h
include/stralgo/utf/foramtters/std/: string.h  string_view.h
perf/: CMakeLists.txt  perf.cc
unittests/: CMakeLists.txt  stralgo.cc  stralgo_utf.cc  strconv_numeric.cc  utf_.cc
unittests/ut_core/: CMakeLists.txt  boost_ut.h  unit_test_core.cc  unit_test_core.h
